namespaces/live-1.cloud-platform.service.justice.gov.uk/dex-mi-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dex-mi-production
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "staff-services-tech"
    cloud-platform.justice.gov.uk/application: "DEX MI - Metabase"
    cloud-platform.justice.gov.uk/owner: "Staff Services: correspondence-support@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/dex_mi_metabase"
